# multi-agent-research

./: .env.example  .gitignore  END_TO_END_ARCHITECTURE.md  Makefile  README.md  app.py  main.py  pyproject.toml  requirements.txt  ruff.toml  supabase_migrations.sql
.github/workflows/: ci.yml  test.yml
.streamlit/: config.toml  secrets.toml.example
configs/: base.yaml
evaluation/: baseline.py  judge_prompt.py  questions.yaml  run_eval.py
results/: explain_vector_databases.docx  what_are_vector_databases.docx  what_are_vector_databases_1.docx  what_are_vector_databases_2.docx  what_are_vector_databases_3.docx  what_is_the_attention_mechanism.docx  what_is_the_attention_mechanism_1.docx  what_is_the_attention_mechanism_2.docx
src/: config.py  guardrails.py
src/agents/: __init__.py  analyst.py  graph.py  planner.py  quality_gate.py  researcher.py  reviewer.py  synthesizer.py  writer.py
src/cache/: __init__.py  research_cache.py
src/models/: __init__.py  state.py
src/observability/: __init__.py  cost.py  db.py  logger.py
src/output/: __init__.py  report_writer.py
src/tools/: __init__.py  async_search.py  search.py  tool_selector.py  wikipedia.py
tests/: conftest.py  test_cache.py  test_config.py  test_e2e_pipeline.py  test_graph.py  test_guardrails.py  test_quality_gate.py  test_state.py  test_tool_selector.py  test_tools.py  test_ui_smoke.py
